Implement RedBlackMap and RedBlackSet.